1999-07-21  Marcus G. Daniels  <mgd@pojoaque.santafe.edu>

	* TclInterp.m (SUBDIR): Define per TCL_{MAJOR,MINOR}_VERSION.

	* TkInterp.m (SUBDIR): Define per TK_{MAJOR_MINOR}_VERSION.

	* TclInterp.m ([TclInterp -checkTclLibrary]): Check for SUBDIR
	instead of tcl8.0.

	* TkInterp.m ([TkInterp -checkTkLibrary]): Check for SUBDIR
	instead of tk8.0.

1999-07-09  Marcus G. Daniels  <mgd@pojoaque.santafe.edu>

	* TclInterp.m ([TclInterp -preInitWithArgc:argv:]): Handle
	Tcl 8.1 initialization using TclSetLibraryPath instead of
	a Tcl_SetVar on tcl_library.

1999-07-02  Marcus G. Daniels  <mgd@pojoaque.santafe.edu>

	* Makefile.am (CPPFLAGS): Add -DBUILDING_SWARM.

1999-06-20  Marcus G. Daniels  <mgd@pojoaque.santafe.edu>

	* tclObjc.m (tclObjc_msgSendToClientData): Rewritten to use
	FCall/FArguments.

	* Makefile.am (INCLUDES): Add .., $(srcdir)/.., and
	$(srcdir)/../defobj.

1999-06-17  Marcus G. Daniels  <mgd@pojoaque.santafe.edu>

	* tclObjc.m (tclObjc_msgSendToClientData): Handle void return
	(libffi and avcall).

1999-06-14  Marcus G. Daniels  <mgd@pojoaque.santafe.edu>

	* HashTable.m: Include swarmconfig.h.
	(hash_int): Use PTRUINT instead of unsigned int.
	(compare_ints): Use PTRINT instead of int.

	* tclObjc.m: Rip out all the __builtin_apply support.
	(dynamicCall): Remove.
	(tclObjc_msgSendToClientData): Rip out all the
	`special hack' stuff.  It's unportable, and libffi/avcall will do
	the job just fine. 
	Declare alloca.  Handle unsigned ints in libffi and avcall cases,
	return and arguments.
	(tclObjc_msgSendToClientData): Use macro for `imp' (closer to
	usages) to stop compiler warnings on alpha.

1999-06-06  Marcus G. Daniels  <mgd@pojoaque.santafe.edu>

	* Makefile.am (noinst_LTLIBRARIES, lib_LTLIBRARIES): Substitute
	{inst,noinst}LIBS.
	(EXTRA_LTLIBRARIES): New variable.
	(MODULE): New variable.

1999-05-29  Marcus G. Daniels  <mgd@pojoaque.santafe.edu>

	* Makefile.am (INCLUDES): Add $(top_builddir)/libobjc (for
	objc/externvar.h).
